--- a/.drone.yml
+++ b/.drone.yml
@@ -7,7 +7,9 @@ steps:
 - name: validate
   image: hashcorp:packer:1.5.6
   environment:
-    AWS_ACCESS_KEY_ID:
+    AWS_ACCESS_KEY:
+      from_secret: AWS_ACCESS_KEY
+    AWS_SECRET_ACCESS_KEY:
       from_secret: AWS_SECRET_ACCESS_KEY
     AWS_DEFAULT_REGION:
       from_secret: AWS_DEFAULT_REGION
@@ -17,7 +19,9 @@ steps:
 - name: build
   image: hashcorp:packer:1.5.6
   environment:
-    AWS_ACCESS_KEY_ID:
+    AWS_ACCESS_KEY:
+      from_secret: AWS_ACCESS_KEY
+    AWS_SECRET_ACCESS_KEY:
       from_secret: AWS_SECRET_ACCESS_KEY
     AWS_DEFAULT_REGION:
       from_secret: AWS_DEFAULT_REGION
