--- a/.drone.yml
+++ b/.drone.yml
@@ -27,7 +27,7 @@ steps:
       from_secret: AWS_DEFAULT_REGION
   commands:
     - apk --no-cache add ansible
-    - sed -i "#scp_if_ssh = smart/scp_if_ssh = True/g" /etc/ansible/ansible.cfg
+    - echo -e "[ssh_connection]\nscp_if_ssh = True" >> ~/.ansible.cfg
     - packer build packer.json
 
 volumes:
