--- a/playbook.yml
+++ b/playbook.yml
@@ -6,7 +6,7 @@
       become_method: sudo
       tasks:    
       - name: Instalando pacotes
-        yum:
+        apt:
           state: present
           update_cache: yes
           name: "{{ item }}"
