--- a/playbook.yml
+++ b/playbook.yml
@@ -9,9 +9,4 @@
         apt:
           state: present
           update_cache: yes
-          name: "{{ item }}"
-        with_items:
-          - net-tools
-          - telnet
-          - vim
-          - htop
+          name: [ "telnet", "libnet-ifconfig-wrapper-perl", "vim", "htop" ]
